Adding package list for explicitly installed package

--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -15,8 +15,8 @@
 #########################################################################################
 
 # You have to change this based on your monitor 
-# monitor=eDP-1,1920x1080@60,0x0,1
-monitor=eDP-1, disabled
+monitor=eDP-1,1920x1080@60,0x0,1
+# monitor=eDP-1, disabled
 monitor=HDMI-A-1, 1920x1080@144, 1920x0, 1
 # monitor=,preferred,auto,1, mirror, eDP-1
 
