--- a/configs/spicetify/config-xpui.ini
+++ b/configs/spicetify/config-xpui.ini
@@ -27,5 +27,5 @@ sidebar_config        = 1
 
 ; DO NOT CHANGE!
 [Backup]
-version = 1.1.84.716.gc5f8b819
-with    = 2.16.2
+version = 1.2.8.923.g4f94bf0d
+with    = 2.17.1
