--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -1,4 +1,3 @@
-
 ########################################################################################
  __  __ _       _                 _ 
 |  \/  (_)_ __ (_)_ __ ___   __ _| |
@@ -17,8 +16,8 @@
 # You have to change this based on your monitor 
 monitor=eDP-1,1920x1080@60,0x0,1
 # monitor=eDP-1, disabled
-monitor=HDMI-A-1, 1920x1080@144, 1920x0, 1
-# monitor=,preferred,auto,1, mirror, eDP-1
+# monitor=HDMI-A-1, 1920x1080@144, 1920x0, 1
+monitor=,preferred,auto,1, mirror, eDP-1
 
 #Notification 
 exec-once=dunst
@@ -239,6 +238,8 @@ bind=SUPER,C,exec,rofi -show calc -modi calc -no-show-match -no-sort
 bind=SUPERSHIFT,B,exec,rofi-bluetooth
 # Clipboard
 bind=SUPER, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
+# Volume Mixer
+bind=SUPER,A,exec,pavucontrol
 
 bind=SUPERSHIFT,RETURN,layoutmsg,swapwithmaster
 
@@ -254,16 +255,16 @@ bind=SUPER,k,movefocus,u
 bind=SUPER,h,movefocus,l
 bind=SUPER,l,movefocus,r
 
-bind=SUPER,left,resizeactive,-40 0
-bind=SUPER,right,resizeactive,40 0
+binde=SUPERSHIFT,h,resizeactive,-40 0
+binde=SUPERSHIFT,l,resizeactive,40 0
 
-bind=SUPER,up,resizeactive,0 -40
-bind=SUPER,down,resizeactive,0 40
+binde=SUPERSHIFT,k,resizeactive,0 -40
+binde=SUPERSHIFT,j,resizeactive,0 40
 
-bind=SUPERSHIFT,h,movewindow,l
-bind=SUPERSHIFT,l,movewindow,r
-bind=SUPERSHIFT,k,movewindow,u
-bind=SUPERSHIFT,j,movewindow,d
+bind=SUPER,left,movewindow,l
+bind=SUPER,right,movewindow,r
+bind=SUPER,up,movewindow,u
+bind=SUPER,down,movewindow,d
 
 bind=SUPER,mouse_down,workspace,-1
 bind=SUPER,mouse_up,workspace,+1
