--- a/configs/spicetify/config-xpui.ini
+++ b/configs/spicetify/config-xpui.ini
@@ -8,6 +8,7 @@ check_spicetify_upgrade = 0
 spotify_path            = /opt/spotify
 color_scheme            = ultrablack
 overwrite_assets        = 0
+inject_theme_js         = 1
 
 [Preprocesses]
 disable_sentry        = 1
@@ -27,5 +28,5 @@ sidebar_config        = 1
 
 ; DO NOT CHANGE!
 [Backup]
-version = 1.2.8.923.g4f94bf0d
-with    = 2.17.1
+version = 1.2.9.743.g85d9593d
+with    = 2.18.1
