--- a/configs/hypr/settings.conf
+++ b/configs/hypr/settings.conf
@@ -1,5 +1,5 @@
 input {
-  sensitivity=0.3
+  sensitivity=-0.2
   follow_mouse=2
   float_switch_override_focus=1
   touchpad {
@@ -7,12 +7,12 @@ input {
     natural_scroll=1
     middle_button_emulation=0
     tap-to-click=1
-    scroll_factor=0.4
+    scroll_factor=0.3
   }
 }
 
 device:elan-touchpad {
-   sensitivity=0.5
+   sensitivity=0.3
    natural_scroll=1
 }
 
@@ -33,8 +33,7 @@ general {
     border_size=3
     col.active_border=0xff7691b5
     col.inactive_border=0xff2c3c53
-
-    apply_sens_to_raw=0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
+    no_focus_fallback=true
 }
 
 binds {
@@ -95,6 +94,7 @@ misc {
   mouse_move_enables_dpms=true
   # animate_mouse_windowdragging=false
   vfr=true
+  close_special_on_empty=true
 }
 
 xwayland {
