--- a/configs/hypr/binds.conf
+++ b/configs/hypr/binds.conf
@@ -13,6 +13,7 @@ bind=SUPERSHIFT, B,exec,firefox
 bind=SUPER, F,fullscreen,1
 bind=SUPER SHIFT,F,fullscreen,0
 bind=SUPER,RETURN,exec,kitty
+bind=SUPERSHIFT, RETURN, exec, kitty
 bind=SUPER SHIFT,Q,exit,
 bind=SUPER, E,exec,nemo
 bind=SUPER, P,pseudo,
