--- a/configs/hypr/startup.conf
+++ b/configs/hypr/startup.conf
@@ -1,8 +1,11 @@
 # Bar
 exec-once=eww open bar
 
-#Notification 
+# Notification 
 exec-once=dunst
+
+# PlayerCTL Daemon
+exec-once=playerctld daemon
 
 # Color Calibration
 # exec-once=wl-gammactl -c 1.100 -b 1.020 -g 0.990
